exports[`Bemlinter of crossed styled files should log error on both blocks 1`] = `
"  ✗ external
[leak.scss:8] Error: \".c-external\" should not be styled outside of its own stylesheet.
  ✗ leak
[leak.scss:8] Error: \".c-external\" is incoherent with the file name.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;

exports[`Bemlinter of crossed styled files should not log error on the external block 1`] = `
"  ✗ leak
[leak.scss:8] Error: \".c-external\" is incoherent with the file name.

FAIL: bemlinter has detected 1 error on 1 block."
`;

exports[`Bemlinter of multi project files should detect the project and the associate leak styles 1`] = `
"  ✗ unprefixed
[unprefixed.scss:8] Error: \".c-prefixed\" is incoherent with the file name.
  ✗ project / prefixed
[unprefixed.scss:8] Error: \".c-prefixed\" should not be styled outside of its own stylesheet.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;

exports[`Bemlinter of multi project files should detect the project and the missing prefix 1`] = `
"  ✗ unprefixed
[unprefixed.scss:8] Error: \".c-prefixed\" is incoherent with the file name.
  ✗ project / prefixed
[project-prefixed.scss:1] Error: \".c-prefixed\" is incoherent with the file name.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;
